Edited wiki page Release_0_3_4 through web user interface.

--- a/wiki/Release_0_3_4.wiki
+++ b/wiki/Release_0_3_4.wiki
@@ -8,14 +8,22 @@ This release succeeds the [Release_0_3_2 release 0.3.2].
 This is mostly a bugfix release. It covers issues 56-60. It also introduces several minor changes to [EclipseDebugger Debugger] and SDK.
 
 ==Old Debug Configuration Converter==
-Since Google Chrome/Chromium 17.0.950.* old debug protocol support is discontinued (see [ChromeDevToolsProtocol#Deprecation_And_Removal details]). [WIP WebKit Remote Debugging Protocol] should be used instead. When [DebuggerTutorial#Connect connecting] from Debugger {{{WebKit Protocol}}} launch configuration type should be used.
+Since Google Chrome/Chromium 17.0.950.`*` old debug protocol support is discontinued (see [ChromeDevToolsProtocol#Deprecation_And_Removal details]). [WIP WebKit Remote Debugging Protocol] should be used instead. When [DebuggerTutorial#Connect connecting] from Debugger {{{WebKit Protocol}}} launch configuration type should be used.
 
 Old {{{Chromium JavaScript}}} launch configurations will now have a "Deprecation" tab warning that the old protocol now goes. It also has a button "Copy Launch Configuration" that should help transfer old configurations to the new type.
 
 ==Property Descriptor Support==
-SDK 
+JavaScript property descriptors now got a clear support in the project. Currently it is only supported by WebKit protocol.
 
-==New WIP Backend==
+In Debugger, object properties with getters now have their values displayed. Small auxiliary command was added to a property context menu: "Watch Property Descriptor". Since Eclise UI can't seem to have a proper display for both property value and property descriptor, this action allows to watch property descriptor on request. It merely creates for you a new expression in "Expressions" view.
 
+In SDK a new interface [http://chromedevtools.googlecode.com/svn//trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JsObjectProperty.html org.chromium.sdk.JsObjectProperty] was added.
 
-It also introduces new WIP backend for Google Chrome 17. It uses more recent !WebSocket protocol (!HyBi-17). It also implements missing feature "Open Function" (see [Release_0_1_6 0.1.6 release notes]).
+==WIP Backends==
+As WebKit Remote Debugging Protocol matures, we are gradually switching from WebKit revision numbers to protocol official version names. See table below.
+
+==== Backend Set Version 0.1.6 ====
+|| id || Protocol version || Chrome version || New features ||
+|| WK@97678 || 0.1 || 16.0.912.`*` || ||
+|| WK@102439 || n/a || 17.0.963.3+ || function position, property descriptor ||
+|| Protocol 1.0 || 1.0 || 18.`*`.`*`.`*` || function position, property descriptor ||
