--- a/wiki/WipBackends.wiki
+++ b/wiki/WipBackends.wiki
@@ -8,3 +8,5 @@ This is how Java SDK tolerates the fact that different versions of Google Chrome
 WIP Backend is currently a user-visible detail. This means that it's a user responsibility to correctly select a proper WIP Backend before attaching from debugger. Each backend is presented in [EclipseDebugger Debugger] UI in {{{Debug Configurations}}} dialog with a small declaration of compatible browser versions.
 
 The exact set of backends change from release to release. That's why they are normally listed in release notes.
+
+WIP Backends are deployed as a separate Eclipse feature "ChromeDevTools SDK WIP Backends".
