--- a/wiki/FeatureDebugOnRealFiles.wiki
+++ b/wiki/FeatureDebugOnRealFiles.wiki
@@ -2,9 +2,34 @@
 
 = Introduction =
 
-This feature is important element of Debugger-IDE integration. By default Debugger works with source files it gets from remote VM -- a files under a temporary VirtualProject. (This means you never has to worry about getting sources for _debugging_).
+This feature is important element of Debugger-IDE integration. By default Debugger works with source files it gets from remote VM -- a files under a temporary VirtualProject. (This means you never have to worry about getting sources for _debugging_).
 
 However you also could be using Eclipse for _developing_ your !JavaScript program. In this case your sources are in file system and it absolutely makes sense to have debugger use them rather than downloaded copies: you code, you set a breakpoint, you see a problem, you fix it -- all in the same editor. An important detail: you can set a breakpoint on a file before script has been loaded and even before you attached to Chrome.
+
+Technically speaking, you will need to establish source mapping in both directions: [EclipseDebugger Debugger] must know how a script in VM (already presented in the VirtualProject) is mapped to some local file and vice verse -- how a local file with breakpoint corresponds to a remote script. And it involves the directory structure both on remote and in local project.
+
+Debugger has 2 approaches to deal with directory structures that are known as _source look-up methods_. You can select a method from "Remote" tab of launch configuration.
+
+https://chromedevtools.googlecode.com/svn/wiki/rel034-debug-configurations-remote.png
+
+== Auto-detect method ==
+Here the source look-up is based on file short names. This is a bit fuzzy because it may fail on files with the same name in different directories and because Debugger takes a liberty to pick a short name from whatever remote VM sends to it (could be any string) and makes some other assumptions.
+
+Configuring:
+  * select "Auto-detect" method in "Remote" tab of launch configuration,
+  * in the "Source" tab, add one or more folders holding your working files.
+
+If all of your files in the project are called 'foo.js', this probably won't work correctly. However, for most projects there shouldn't be any problems.
+
+Anyway, should you occasionally have a few files with the same name in different directories, there is a fall-back: you can configure Debugger to take a directory name into consideration for this particular file.
+
+1. Open file properties (Alt+Enter) on your local file.
+
+https://chromedevtools.googlecode.com/svn/wiki/rel030-script-properties.png
+
+2. Use "Less" and "More" buttons to add or remove file path components. By default, only the file name is used, but you may add its parent directory or a longer path. All selected file path components will be used for matching this file. 
+
+
 
 Unfortunately V8 requires quite precise breakpoint information for this to work. That's why there follow several steps that cannot be automatized:
 
