--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -31,3 +31,4 @@ DevToolsProtocolDeprecationTab_SEE_ALSO=See also:
 DevToolsProtocolDeprecationTab_TITLE=Deprecation
 # note that this string is a part of the hidden filename, so translate with care
 LaunchType_LogConsoleLaunchName=chromedevtools-logger
+ScriptMappingTab_TAB_NAME=Script Mapping
