--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -31,4 +31,8 @@ DevToolsProtocolDeprecationTab_SEE_ALSO=See also:
 DevToolsProtocolDeprecationTab_TITLE=Deprecation
 # note that this string is a part of the hidden filename, so translate with care
 LaunchType_LogConsoleLaunchName=chromedevtools-logger
+ScriptMappingTab_DESCRIPTION=Description
+ScriptMappingTab_RECOGNIZED_WRAPPING=Recognized Source Wrappings
 ScriptMappingTab_TAB_NAME=Script Mapping
+ScriptMappingTab_UNRESOLVED_ERROR_MESSAGE=Unresolved Source Wrapper: {0}
+ScriptMappingTab_UNRESOVLED=Unresolved ''{0}''
