--- a/wiki/Release_0_3_6.wiki
+++ b/wiki/Release_0_3_6.wiki
@@ -6,7 +6,11 @@ This release succeeds the [Release_0_3_4 release 0.3.4].
 
 ==Overview==
 
-This release brings some new debugger features. It also fixes issues 62 (AKA 65), 64 and 66.
+This release brings some new debugger features. It also fixes issues [http://code.google.com/p/chromedevtools/issues/detail?id=61 62]
+(AKA [http://code.google.com/p/chromedevtools/issues/detail?id=65 65]),
+[http://code.google.com/p/chromedevtools/issues/detail?id=64 64]
+and 
+[http://code.google.com/p/chromedevtools/issues/detail?id=66 66].
 
 ==Launch Configuration UI==
 A small UI change is made to launch configuration dialog. It gets a new tab “Script Mapping”, that adopts “Source look-up method” control from overcrowded “Remote” tab, and has a new Source Wrapping control (see [#Source_Wrapping_Support below]).
