Edited wiki page Release_0_3_6 through web user interface.

--- a/wiki/Release_0_3_6.wiki
+++ b/wiki/Release_0_3_6.wiki
@@ -76,7 +76,7 @@ As !WebKit Remote Debugging Protocol evolves beyond [https://developers.google.c
 
 ==System Requirements==
 || *Eclipse configuration:*  ||Eclipse Platform or any richer configuration (e.g. Eclipse Java IDE). ||
-|| *Eclipse version:* ||  Eclipse 3.5 minimum, Eclipse 3.6 is also tested. ||
+|| *Eclipse version:* ||  Eclipse 3.5 minimum, Eclipse 3.6 and 4.2 is also tested. ||
 || *Java:* || J2SE-1.6 or newer. ||
 
 Optional:
