--- a/wiki/Release_0_3_6.wiki
+++ b/wiki/Release_0_3_6.wiki
@@ -13,7 +13,7 @@ and
 [http://code.google.com/p/chromedevtools/issues/detail?id=66 66].
 
 ==Launch Configuration UI==
-A small UI change is made to launch configuration dialog. It gets a new tab “Script Mapping”, that adopts “Source look-up method” control from overcrowded “Remote” tab, and has a new Source Wrapping control (see [#Source_Wrapping_Support below]).
+A small UI change is made to launch configuration dialog. The configuration gets a new tab “Script Mapping”, that adopts “Source look-up method” control from overcrowded “Remote” tab; the tab also has a new Source Wrapping control (see [#Source_Wrapping_Support below]).
 
 ==Function Scope and Primitve Values==
 !JavaScript language is known to support _closures_. A closure is a nested function that “sees” local variables of a parent function. Typically the _pointer_ to the closure will be kept and called later, after the parent function has finished. This means that the closure must keep those variables somehow. Together these variables are called a closure/function's _scope_.
@@ -25,13 +25,13 @@ return function(x) {
     return x <= limit;
 };
 }}}
-Its behavior is trivial, but what it actually does depends on the additional data: what {{{limit}}} value is.
+The behavior is trivial, but what the function actually does depends on the data: what {{{limit}}} value is.
 
-Since now you can do it if you expand function's properties and open the pseudo-property: <function scope>. That's where the value of {{{limit}}} is displayed together with all other _bound_ variables of this particular instance of function.
+Since now you can inspect this in Variables/Expressions view by expanding function's properties and opening the pseudo-property <function scope>. That's where the value of {{{limit}}} is displayed together with all other _bound_ variables of function.
 
 _Note:_ this is supported in Chrome starting from WK118685 backend, and via Standalone V8 protocol starting since version 3.10.7.
 
-Another small enhancement is a visible “primitive value” property. In !JavaScript simple values (number, string and boolean) can be wrapped as objects. For example  {{{Object(-1)}}}  or  {{{Object("crazy")}}}  returns no number or string. Those are objects that wrap original primitive value in an invisible internal property. With this release you can see it explicitly in Variables/Expressions view.
+Another small enhancement is a visible “primitive value” property. In !JavaScript simple values (number, string and boolean) can be wrapped as objects. For example  {{{Object(-1)}}}  or  {{{Object("crazy")}}}  returns no number or string. Those are objects that wrap original primitive value in an invisible internal property. With this release you can see the property explicitly in Variables/Expressions view.
 
 _Note:_ this currently works only for Standalone V8 protocol since V8 3.10.5.
 
@@ -43,9 +43,9 @@ http://chromedevtools.googlecode.com/svn/wiki/rel036-step-icons.svg
 
 In this release this button is finally wired up.
 
-In Eclipse its name is “Drop to frame” which better reflects that not only the topmost frame you can rewind, but also any frame. In this case all frames above are just gone.
+In Eclipse its name is “Drop to frame” which better reflects the fact that not only the topmost frame you can rewind, but also any frame. If the frame is not the topmost, all frames above it are just gone.
 
-Note that the 'rewind' does not reset the entire VM back to its previous state. It simply allows you to execute the same statements from the beginning. What external changes were done are done. For example if your function increments some global variable, that won't be undone.
+Note that the 'rewind' does not reset the entire VM back to its previous state. It simply allows you to re-execute the same statements from the beginning. Whatever external changes were done are done. For example if your function increments some global variable, that won't be undone.
 
 _Note:_ this works in Chrome in backend WK120709 and Standalone V8 since 3.12.0.
 
