--- a/wiki/Release_0_3_6.wiki
+++ b/wiki/Release_0_3_6.wiki
@@ -1,6 +1,6 @@
-#summary upcoming release 0.3.6 notes
+#summary release 0.3.6 notes
 
-=Google Chrome Developer Tools for Java. Upcoming Release 0.3.6.=
+=Google Chrome Developer Tools for Java. Release 0.3.6.=
 
 This release succeeds the [Release_0_3_4 release 0.3.4].
 
@@ -63,10 +63,10 @@ http://chromedevtools.googlecode.com/svn/wiki/rel036-debug-configurations-mappin
 To better see how it works for Node.JS scripts, you can perform a live editing push with a preview dialog ({{{context menu | V8 Debugging | Preview and Push Source Changes to VM...}}})
 
 ==SDK==
-SDK gets a few extensions backing the new features (see javadoc for 0.3.6 LINK). It comes with 2 new [WipBackends wip backends] for Chrome 21 and early Chrome 22. 
+SDK API gets a few extensions backing the new features (see [http://chromedevtools.googlecode.com/svn/tags/chromedevtools-0.3.6/plugins/org.chromium.sdk/javadocs/index.html javadoc for 0.3.6]).
 
 ==WIP Backends==
-As !WebKit Remote Debugging Protocol evolves beyond [https://developers.google.com/chrome-developer-tools/docs/protocol/1.0/index 1.0 version], it gains new features that are supported by 2 new backends. See table below.
+As !WebKit Remote Debugging Protocol evolves beyond [https://developers.google.com/chrome-developer-tools/docs/protocol/1.0/index 1.0 version], it gains new features that are supported by 2 new [WipBackends backends] for Chrome 21 and early Chrome 22.. See table below.
 
 ==== Backend Set Version 0.1.8 ====
 || id || Chrome version || New features ||
