--- a/wiki/HowToBuild.wiki
+++ b/wiki/HowToBuild.wiki
@@ -78,7 +78,7 @@ ant sdkJavadocs
 Result is in {{{../../staging/result/sdkJavadocs}}}
 
 =Release Checklist=
-  * Bump up [Versioning version] to odd _"release"_ number.
+  * Bump up [Versioning version] to even _"release"_ number.
   * Update license year numbers.
   * Build plugins and libraries.
   * Upload build to update repository.
@@ -88,4 +88,4 @@ Result is in {{{../../staging/result/sdkJavadocs}}}
   * Write up Release notes.
   * Send a message to mail group.
   * Update first page.
-  * Bump up [Versioning version] to even _"development"_ number.
+  * Bump up [Versioning version] to odd _"development"_ number.
