Introduce Exception type of breakpoint
Review URL: https://chromiumcodereview.appspot.com/10834162

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -9,6 +9,8 @@ JavascriptLineBreakpointPage_EnableCondition=Enable Condition
 JavascriptLineBreakpointPage_Enabled=Enabled
 JavascriptLineBreakpointPage_IgnoreCount=Ignore Count
 JavascriptLineBreakpointPage_IgnoreCountErrorMessage=Ignore count must be a positive integer
+JsExceptionBreakpointPage_CAUGHT=Caught exceptions
+JsExceptionBreakpointPage_UNCAUGHT=Uncaught exceptions
 JsLineBreakpointPage_LineNumberLabel=Line Number:
 JsLineBreakpointPage_ResourceLabel=Resource:
 JsLineBreakpointPage_UnknownLineNumber=<unknown>
