--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
@@ -7,5 +7,7 @@ ChromiumDebugUIPlugin_Warning=Warning
 ChromiumDebugUIPlugin_Info=Info
 ChromiumToggleBreakpointTargetFactory_TOGGLE_TARGET_DESCRIPTION=Breakpoints in Chrome/V8 Javascript VM
 ChromiumToggleBreakpointTargetFactory_TOGGLE_TARGET_NAME=Chrome/V8 breakpoints
+JsDebugModelPresentation_EXCEPTION_LABEL_CAUGHT_ADDENDUM=\ and caught
+JsDebugModelPresentation_EXCEPTION_LABEL=JS Exception: uncaught{0}
 JsWatchExpressionDelegate_BadStackStructureWhileEvaluating=Bad stack structure encountered while evaluating
 JsWatchExpressionDelegate_ErrorEvaluatingExpression=Error evaluating expression
