--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -2,6 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+ChromiumExceptionBreakpoint_MessageMarkerFormat=Exception Breakpoint
 ChromiumTabSelectionDialog_DialogTitle=Select Tab to Debug
 ChromiumTabSelectionDialog_IdColumnName=ID
 ChromiumTabSelectionDialog_TableTitle=Available Tabs
